Added SentimentAnalyzer to analyze sentiment of user messages.

--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -26,16 +26,16 @@
         <artifactId>jsoup</artifactId>
         <version>1.13.1</version>
     </dependency>
-
-
-
-    <!--Data Store-->
+    
     <dependency>
         <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-datastore</artifactId>
-        <version>1.104.0</version>
+        <artifactId>google-cloud-language</artifactId>
+        <version>1.55.0</version>
     </dependency>
+    <!--Data Store-->
+    
     <!--Gson-->
+    
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
