--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -26,18 +26,18 @@
         <artifactId>jsoup</artifactId>
         <version>1.13.1</version>
     </dependency>
-    
+    <!--Cloud Natural Language Library-->
     <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-language</artifactId>
         <version>1.55.0</version>
     </dependency>
     <!--Data Store-->
-    <dependency>
+    <!--<dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-datastore</artifactId>
         <version>1.104.0</version>
-    </dependency>
+    </dependency>-->
     <!--Gson-->
     
     <dependency>
